fix(module:button): icon vertical align

--- a/components/button/style/index.less
+++ b/components/button/style/index.less
@@ -94,10 +94,6 @@
 
   &-icon-only {
     .btn-square(@btn-prefix-cls);
-
-    > i {
-      vertical-align: middle;
-    }
   }
 
   &-round {
